--- a/src/App.css
+++ b/src/App.css
@@ -194,7 +194,7 @@ img {
 /*-- Index-Page-Styling --*/
 
 body {
-  background: url("./images/background.jpg");
+  /*background: url("./images/background.jpg");*/
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
